--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         {
             "name": "Jake Booher",
             "email": "jakebooher@protonmail.com"
+        },
+        {
+            "name": "Lukas Wieditz"
         }
     ]
 }
