--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
-        "symfony/var-dumper": "^4.2"
+        "symfony/var-dumper": "^4.2",
+        "phpunit/phpunit": "^5"
     },
     "autoload": {
         "psr-4": {
