--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jakebooher/xfapi-php",
+    "name": "xfapi/xfapi-php",
     "description": "A PHP library for XenForo's REST API",
     "type": "library",
     "require": {
